make hdfcache work with MacOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -464,8 +464,14 @@ ELSE(PYTHON_INCLUDE_PATH)
 ENDIF(PYTHON_INCLUDE_PATH)
 
 IF(ENABLE_HDFIOCACHE)
-    CHECK_OPTIONAL_LIB(BOOST_THREAD boost_thread-mt boost/thread.hpp)
-    CHECK_OPTIONAL_LIB(BOOST_FILESYSTEM boost_filesystem-mt boost/filesystem.hpp)
+    IF(APPLE)
+        CHECK_OPTIONAL_LIB(BOOST_THREAD boost_thread boost/thread.hpp)
+        CHECK_OPTIONAL_LIB(BOOST_FILESYSTEM boost_filesystem boost_system boost/filesystem.hpp)
+        CHECK_OPTIONAL_LIB(BOOST_SYSTEM boost_system boost/filesystem.hpp)
+    ELSE(APPLE)
+        CHECK_OPTIONAL_LIB(BOOST_THREAD boost_thread-mt boost/thread.hpp)
+        CHECK_OPTIONAL_LIB(BOOST_FILESYSTEM boost_filesystem-mt boost/filesystem.hpp)
+    ENDIF(APPLE)
 ENDIF(ENABLE_HDFIOCACHE)
 
 MARK_AS_ADVANCED(FORCE CMAKE_BACKWARDS_COMPATIBILITY)
