--- a/libEM/CMakeLists.txt
+++ b/libEM/CMakeLists.txt
@@ -193,7 +193,7 @@ ELSE(ENABLE_OPENGL)
 ENDIF(ENABLE_OPENGL)
 
 if(ENABLE_HDFIOCACHE)
-    TARGET_LINK_LIBRARIES(EM2 ${BOOST_THREAD_LIBRARY} ${BOOST_FILESYSTEM_LIBRARY})
+    TARGET_LINK_LIBRARIES(EM2 ${BOOST_THREAD_LIBRARY} ${BOOST_FILESYSTEM_LIBRARY} ${BOOST_SYSTEM_LIBRARY})
 endif(ENABLE_HDFIOCACHE)
 
 FILE(GLOB headerfiles "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
