stop compile e2speedtest executable file

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -2,8 +2,8 @@
 #ADD_EXECUTABLE(shared_ptr baldwinweights.cpp)
 #ADD_EXECUTABLE(pdbreader pdbreader.cpp)
 #ADD_EXECUTABLE(e2ptcltrace e2ptcltrace.cpp)
-ADD_EXECUTABLE(e2speedtest speedtest.cpp)
-TARGET_LINK_LIBRARIES(e2speedtest EM2)
-INSTALL(TARGETS e2speedtest 
-    DESTINATION    bin
-)
+#ADD_EXECUTABLE(e2speedtest speedtest.cpp)
+#TARGET_LINK_LIBRARIES(e2speedtest EM2)
+#INSTALL(TARGETS e2speedtest 
+#    DESTINATION    bin
+#)
