Implement the I/O for TIA (Emispec) file format (.ser). Initial version, need remove those print out.

--- a/libEM/CMakeLists.txt
+++ b/libEM/CMakeLists.txt
@@ -53,6 +53,7 @@ SET(LIB_EM_SOURCE byteorder.cpp
     df3io.cpp
     omapio.cpp
     situsio.cpp
+    serio.cpp
     emcache.cpp
     ctf.cpp
     xydata.cpp
