Gatan DM4 reading support. Not tested yet.

--- a/libEM/CMakeLists.txt
+++ b/libEM/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(LIB_EM_SOURCE byteorder.cpp
     pdbreader.cpp
     mrcio.cpp
     dm3io.cpp
+    dm4io.cpp
     tifio.cpp
     hdfio.cpp
     hdfio2.cpp
