--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ OPTION(ENABLE_DEBUG "enable debug support" OFF)
 OPTION(ENABLE_PROFILE "enable symbol generation without debug support" OFF)
 OPTION(ENABLE_ATHLON "enable ATHLON specific support" OFF)
 OPTION(ENABLE_X86_64 "enable x86_64 specific optimizations" OFF)
+OPTION(ENABLE_MACH_OPT "enable optimization for the specific machine being compiled on. May be incompatible with other computers" OFF)
 OPTION(ENABLE_WINDOWS_VC "enable visual c++ specific optimization" OFF)
 
 OPTION(ENABLE_LEOPARD "enable OSX 10.5 support" OFF)
@@ -115,8 +116,10 @@ ELSEIF (ENABLE_ATHLON)
 ELSEIF (ENABLE_MOUNTAIN_LION)
     SET (OPT_FLAGS "-Os -ffast-math")
 ELSEIF (ENABLE_X86_64)
-#    SET (OPT_FLAGS "-O5 -ansi -march=k8 -mfpmath=sse -m64 -ffast-math -pipe")
-    SET (OPT_FLAGS "-O5 -ansi -mfpmath=both -march=core-avx-i -m64 -ffast-math -pipe")
+    SET (OPT_FLAGS "-O5 -ansi -march=k8 -mfpmath=sse -m64 -ffast-math -pipe")
+#    SET (OPT_FLAGS "-O5 -ansi -mfpmath=both -march=core-avx-i -m64 -ffast-math -pipe")
+ELSEIF (ENABLE_MACH_OPT)
+    SET (OPT_FLAGS "-O5 -ansi -march=native -m64 -ffast-math -pipe")
 ELSEIF (ENABLE_WINDOWS_VC)
 	SET (OPT_FLAGS "/Ox /DHAVE_INLINE")
 ELSE()
