Revamp options for optimization in CMakeList

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,10 @@ MARK_AS_ADVANCED(LIBRARY_OUTPUT_PATH EXECUTABLE_OUTPUT_PATH)
 
 OPTION(ENABLE_AUTODOC "enable latex/doxygen document generation and etc. " OFF)
 
-OPTION(ENABLE_FFTW2 "enable fftw 2 support" OFF)
-OPTION(ENABLE_FFTW3 "enable fftw 3 support" ON)
+OPTION(ENABLE_FFTW2 "enable fftw 2 support (LEGACY)" OFF)
+OPTION(ENABLE_FFTW3 "enable fftw 3 support (USE THIS)" ON)
 OPTION(ENABLE_FFTW_PLAN_CACHING "enable fftw caching" ON)
-OPTION(ENABLE_NATIVE_FFT "enable native fft support" OFF)
+OPTION(ENABLE_NATIVE_FFT "enable native fft support (for non-GPL use)" OFF)
 OPTION(ENABLE_ACML_FFT "enable AMD Core Math Library fft support" OFF)
 MARK_AS_ADVANCED(ENABLE_ACML_FFT)
 OPTION(ENABLE_DJBFFT "enable djbfft support" OFF)
@@ -61,34 +61,31 @@ OPTION(ENABLE_IOCACHE "enable ImageIO caching" OFF)
 #flags for optimization level. You can only turn one of following option to ON, or leave all of them to OFF.
 OPTION(ENABLE_DEBUG "enable debug support" OFF)
 OPTION(ENABLE_PROFILE "enable symbol generation without debug support" OFF)
-OPTION(ENABLE_ATHLON "enable ATHLON specific support" OFF)
-OPTION(ENABLE_X86_64 "enable x86_64 specific optimizations" OFF)
-OPTION(ENABLE_MACH_OPT "enable optimization for the specific machine being compiled on. May be incompatible with other computers" OFF)
-OPTION(ENABLE_WINDOWS_VC "enable visual c++ specific optimization" OFF)
-
-OPTION(ENABLE_LEOPARD "enable OSX 10.5 support" OFF)
+OPTION(ENABLE_OPTIMIZE_X86_64 "GCC optimizations for generic X86_64" OFF)
+OPTION(ENABLE_OPTIMIZE_MACHINE "Optimize code for this specific computer (typ 5-10% speedup). Binaries may incompatible with some other computers." OFF)
+OPTION(ENABLE_OPTIMIZE_WINDOWS_VC "Windows visual c++ specific optimization" OFF)
 
 IF(CMAKE_SYSTEM MATCHES "Darwin-12*")
-	OPTION(ENABLE_MOUNTAIN_LION "enable OSX 10.8 support" ON)
+	OPTION(ENABLE_OPTIMIZE_MOUNTAIN_LION "enable OSX 10.8/9 support" ON)
 ELSE(CMAKE_SYSTEM MATCHES "Darwin-12*")
-	OPTION(ENABLE_MOUNTAIN_LION "enable OSX 10.8 support" OFF)
+	OPTION(ENABLE_OPTIMIZE_MOUNTAIN_LION "enable OSX 10.8/9 support" OFF)
 ENDIF(CMAKE_SYSTEM MATCHES "Darwin-12*")
 
 
 #MESSAGE (FATAL_ERROR ${CMAKE_SYSTEM} )
-IF (ENABLE_LEOPARD)
-	SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-dylib_file,/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib:/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib")
-	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-dylib_file,/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib:/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib")
-ENDIF (ENABLE_LEOPARD)
+# IF (ENABLE_LEOPARD)
+# 	SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-dylib_file,/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib:/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib")
+# 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-dylib_file,/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib:/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib")
+# ENDIF (ENABLE_LEOPARD)
 
-IF (ENABLE_MOUNTAIN_LION)
+IF (ENABLE_OPTIMIZE_MOUNTAIN_LION)
 	SET(GL_LIBRARY /System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib)
 	SET(GLU_LIBRARY /System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGLU.dylib)
 	SET(GL_INCLUDE_PATH /usr/include)
 	SET(GLU_INCLUDE_PATH /usr/include)
 #	SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-dylib_file,/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib:/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGLU.dylib")
 #	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-dylib_file,/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib:/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGLU.dylib")
-ENDIF (ENABLE_MOUNTAIN_LION)
+ENDIF (ENABLE_OPTIMIZE_MOUNTAIN_LION)
 
 IF (ENABLE_MEMDEBUG)
 	ADD_DEFINITIONS(-DMEMDEBUG -W -Wall)
@@ -111,16 +108,14 @@ IF (ENABLE_DEBUG)
 ELSEIF(ENABLE_PROFILE)
     SET (OPT_FLAGS "-O2 -g -ansi")
     OPTION(ENABLE_DEBUG "enable debug support" OFF)
-ELSEIF (ENABLE_ATHLON)
-    SET (OPT_FLAGS "-O3 -ansi -march=athlon-xp -mfpmath=sse -msse -funroll-loops -pipe")
-ELSEIF (ENABLE_MOUNTAIN_LION)
+ELSEIF (ENABLE_OPTIMIZE_MOUNTAIN_LION)
     SET (OPT_FLAGS "-Os -ffast-math")
-ELSEIF (ENABLE_X86_64)
+ELSEIF (ENABLE_OPTIMIZE_X86_64)
     SET (OPT_FLAGS "-O5 -ansi -march=k8 -mfpmath=sse -m64 -ffast-math -pipe")
 #    SET (OPT_FLAGS "-O5 -ansi -mfpmath=both -march=core-avx-i -m64 -ffast-math -pipe")
-ELSEIF (ENABLE_MACH_OPT)
+ELSEIF (ENABLE_OPTIMIZE_MACHINE)
     SET (OPT_FLAGS "-O5 -ansi -march=native -m64 -ffast-math -pipe")
-ELSEIF (ENABLE_WINDOWS_VC)
+ELSEIF (ENABLE_OPTIMIZE_WINDOWS_VC)
 	SET (OPT_FLAGS "/Ox /DHAVE_INLINE")
 ELSE()
     SET (OPT_FLAGS "-O3 -ansi -ffast-math")		# This is the default
