New compile-time optional FFT caching in EMData objects. This may offer a considerable speedup in some cases where FFTs are used repeatedly on static images, at the cost of some RAM.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ OPTION(ENABLE_FFTW3 "enable fftw 3 support (USE THIS)" ON)
 OPTION(ENABLE_FFTW_PLAN_CACHING "enable fftw caching" ON)
 OPTION(ENABLE_NATIVE_FFT "enable native fft support (for non-GPL use)" OFF)
 OPTION(ENABLE_ACML_FFT "enable AMD Core Math Library fft support" OFF)
+OPTION(ENABLE_FFT_CACHING "enable FFT Caching" OFF)
 MARK_AS_ADVANCED(ENABLE_ACML_FFT)
 OPTION(ENABLE_DJBFFT "enable djbfft support" OFF)
 MARK_AS_ADVANCED(ENABLE_DJBFFT)
@@ -366,7 +367,11 @@ IF(ENABLE_ACML_FFT)
 	SET(ACML_LIBRARIES ${ACML_LIBRARY})
     SET(ACML_INCLUDE_PATH ${ACML_INCLUDE_PATH})
 ENDIF(ENABLE_ACML_FFT)
-	
+
+IF (ENABLE_FFT_CACHING)
+	ADD_DEFINITIONS(-DFFT_CACHING)
+ENDIF(ENABLE_FFT_CACHING)
+
 IF(ENABLE_NATIVE_FFT)
 	ADD_DEFINITIONS(-DNATIVE_FFT)
 	OPTION(ENABLE_FFTW2 "enable fftw 2 support" OFF)
