Patch to fix compilation on Yosemite. Working on dense particles in e2ctf. Improvements to automatic settings in 2-D plots.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,8 @@ ELSEIF(ENABLE_PROFILE)
     SET (OPT_FLAGS "-O2 -g -ansi")
     OPTION(ENABLE_DEBUG "enable debug support" OFF)
 ELSEIF (ENABLE_OPTIMIZE_MOUNTAIN_LION)
-    SET (OPT_FLAGS "-O3 -ffast-math")
+#    SET (OPT_FLAGS "-O3 -ffast-math")
+    SET (OPT_FLAGS "-O3")
 #    SET (OPT_FLAGS "-Os -ffast-math")
 ELSEIF (ENABLE_OPTIMIZE_X86_64)
     SET (OPT_FLAGS "-O5 -ansi -march=k8 -mfpmath=sse -m64 -ffast-math -pipe")
