New 3D aligner is operable. Perhaps not correct, but it is operable. Still needs some work, clearly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -419,7 +419,8 @@ IF (ENABLE_FTGL)
 		ADD_DEFINITIONS(-DOLD_FTGL)
 	ENDIF(EXISTS ${FTGL_INCLUDE_PATH}/FTGL/FTGL.h AND COMMAND IF)
 	ADD_SUBDIRECTORY(fonts)
-	CHECK_REQUIRED_LIB(FREETYPE freetype freetype/config/ftheader.h ft2build.h freetype2/ft2build.h)
+    	FIND_PATH(FREETYPE_INCLUDE_PATH ft2build.h /usr/include/freetype2 /usr/include $ENV{${upper}DIR}/include ${INCLUDE_DIRS})
+	CHECK_REQUIRED_LIB(FREETYPE freetype freetype/config/ftheader.h )
 	IF (ENABLE_STATIC_FTGL)
 		IF(WIN32)
 			CHECK_REQUIRED_LIB(FREETYPE freetype ft2build.h)
